--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
             <div class="nav-container">
                 <h1 class="nombre">Jesús Nuñez UX/UI Design</h1>
                 <ul class="nav-links">
-                    <li><a href="proyecto1.html">Proyectos</a></li>
-                    <li><a href="#">Sobre Mi</a></li>
-                    <li><a href="#">Contacto</a></li>
+                    <li><a href="#sobremi-contact">Sobre Mi</a></li>
+                    <li><a href="#sobremi-contact">Contacto</a></li>
                 </ul>
             </div>
         </nav>
@@ -32,9 +31,40 @@
 
 
     <main class="page-container">
-        <div class= "titulo">
-        "Mis proyectos"
-        </div>
+        <h1 class="fw-300 centrar-texto">Mis proyectos</h1>
+
+        <section class="paragraphs">
+                <div class="img">
+                    <img data-aos="fade-up" data-aos-duration="3000" id="everblink" src="everlink.png" alt="everlink">
+    
+                </div>
+                <div class="texto-descripcion">
+                    <h2 class="nombrecasos">Everlink </h2>
+    
+                    <p class="parrafo"> Porque la organización de eventos en empresas demanda tiempo,
+                        esfuerzo y supone un elevado coste, Everblink facilita la gestión de eventos
+                        para empresa, proveedores y empleados en una multiplataforma.
+                    </p>
+                    <a class="link-case-study" target="_blank" href="https://medium.com/@jnredondo/ux-case-study-metro-de-madrid-86da0d3184ba">
+                        Ver case Study<i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a>    
+                </div>
+            </section>
+
+            <section class="paragraphs">
+                    <div class="img" style="order: 2">
+                        <img data-aos="fade-up" data-aos-duration="3000" id="forest" src="tcuida.png" alt="forest">
+                    </div>
+                    <div class="texto-descripcion">
+                        <h2 class="nombrecasos">Tcuida</h2>
+                        <p class="parrafo"> Web orientada al cuidado de personas con dependencia. En una única plataforma,
+                            se brinda información sobre la Ley de Dependencia y ayudas,
+                            se pone en contacto a profesionales certificados del ámbito sanitario con familiares
+                            que necesiten el servicio y se da apoyo psicológico a familiares y dependientes.
+                        </p>
+                        <a class="link-case-study" target="_blank" href="https://medium.com/@jnredondo/ux-case-study-metro-de-madrid-86da0d3184ba">
+                            Ver case Study<i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a>    
+                    </div>
+                </section>
 
         <section class="paragraphs">
             <div class="img">
@@ -42,46 +72,17 @@
             </div>
             <div class="texto-descripcion">
                 <h2 class="nombrecasos">Metro de Madrid</h2>
-                <p> Rediseño de la app con especial enfoque en crear una interfaz más atractiva y sencilla para el
+                <p class="parrafo"> Rediseño de la app con especial enfoque en crear una interfaz más atractiva y sencilla para el
                     usuario.
                     La funcionalidad de la app facilita la accesibilidad en el acceso la ruta.
                 </p>
+                <a class="link-case-study" target="_blank" href="https://medium.com/@jnredondo/ux-case-study-metro-de-madrid-86da0d3184ba">
+                Ver case Study<i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a>
             </div>
         </section>
 
-        <section class="paragraphs">
-            <div class="img" style="order: 2">
-                <img data-aos="fade-up" data-aos-duration="3000" id="forest" src="tcuida.png" alt="forest">
-            </div>
-            <div class="texto-descripcion">
-                <h2 class="nombrecasos">Tcuida</h2>
-                <p> Web orientada al cuidado de personas con dependencia. En una única plataforma,
-                    se brinda información sobre la Ley de Dependencia y ayudas,
-                    se pone en contacto a profesionales certificados del ámbito sanitario con familiares
-                    que necesiten el servicio y se da apoyo psicológico a familiares y dependientes.
-                </p>
-            </div>
-
-        </section>
-
-        <section class="paragraphs">
-            <div class="img">
-                <img data-aos="fade-up" data-aos-duration="3000" id="everblink" src="metro.png" alt="everlink">
-
-            </div>
-            <div class="texto-descripcion">
-                <h2 class="nombrecasos">Everlink </h2>
-
-                <p> Porque la organización de eventos en empresas demanda tiempo,
-                    esfuerzo y supone un elevado coste, Everblink facilita la gestión de eventos
-                    para empresa, proveedores y empleados en una multiplataforma.
-                </p>
-            </div>
-
-
-        </section>
         <div class="container2">
-            <div>
+            <div id="sobremi-contact">
                 <h1> Sobre mi</h1>
                 <h4>Soy diseñador UX/UI, vengo del mundo de la Consultoría donde acumulo 8 años de
                     experiencia dando soluciones a pymes y grandes empresas como BBVA.</h4>
@@ -94,26 +95,27 @@
                     Me ha llevado a donde siempre he querido estar, encontrándome con mi verdadero yo y mi
                     pasión por hacer de este mundo un lugar más accesible. </h4>
             </div>
-
-            <div>
-                <h1>Contáctame</h1>
-                </a>
-                <div class="redes">
-                        <a class="medium" href="https://medium.com/@jnredondo">Medium</a>
-                        <a class="LinkedIn" href="www.linkedin.com/in/jenure">LinkedIn</a>
-                </div>
-
-            </div>
         </div>
         </section>
 
     </main>
     </div>
 
+    <!-- Footer -->
+    <footer> 
+        <div class="container-footer">
+        <div>
+            <h2>Contacto</h2>
+        </di>
+            <div class="redes-footer">
+                <a href="https://medium.com/@jnredondo" target="_blank"><i class="fab fa-medium-m" aria-hidden="true"></i></a>
+                <a href="https://www.linkedin.com/in/jenure" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
+                <a href="mailto:jnredondo3@gmail.com" target="_blank"><i class="far fa-envelope" aria-hidden="true"></i></a>
+            </div>
 
-    <footer class="site-footer seccion">
-        <div class="contenedor contenedor-footer">
-            <p class="copyright">Todos los derechos Reservados 2019 &copy</p>
+            <div class="derechos">
+                <p>© 2019 Jesús Nuñez. Todos los derechos reservados.</p>
+            </div>
         </div>
     </footer>
 
@@ -122,6 +124,9 @@
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
     AOS.init();
+    window.addEventListener('load', AOS.refresh)
 </script>
+<script src="https://kit.fontawesome.com/026ed7ef67.js" crossorigin="anonymous"></script><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-shims.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free-v4-font-face.min.css" media="all"><link rel="stylesheet" href="https://kit-free.fontawesome.com/releases/latest/css/free.min.css" media="all">
+
 
 </html>
