--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
 
     <main class="page-container">
-        <h1 class="fw-300 centrar-texto">Mis proyectos</h1>
+        <div class="title">
+                 Hola soy Jesús, una diseñador UX/UI 
+        </div>
 
         <section class="paragraphs">
                 <div class="img">
@@ -61,7 +63,7 @@
                             se pone en contacto a profesionales certificados del ámbito sanitario con familiares
                             que necesiten el servicio y se da apoyo psicológico a familiares y dependientes.
                         </p>
-                        <a class="link-case-study" target="_blank" href="https://medium.com/@jnredondo/ux-ui-case-study-tcuida-app-wellness-aacfdb1827dc">
+                        <a class="link-case-study" target="_blank" href="https://medium.com/@jnredondo/ux-case-study-metro-de-madrid-86da0d3184ba">
                             Ver case Study<i class="fas fa-long-arrow-alt-right" aria-hidden="true"></i></a>    
                     </div>
                 </section>
