--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main class="page-container">
         <div class="title">
-                 Hola soy Jesús, un diseñador UX/UI 
+                 Hola soy Jesús, diseñador UX/UI 
         </div>
 
         <section class="paragraphs">
